--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@ footer {
   <h2>Leadership & Moments</h2>
 
   <div class="gallery">
-    <img src="images/photo1.jpeg">
-    <img src="images/photo2.jpeg">
-    <img src="images/photo3.jpeg">
+    <img src="photo1.jpeg">
+    <img src="photo2.jpeg">
+    <img src="photo3.jpeg">
   </div>
 </section>
 
