--- a/index.html
+++ b/index.html
@@ -106,7 +106,66 @@ footer {
   MBA candidate at IIM Amritsar with experience in Private Banking, Key Account Management and Financial Markets. Passionate about data-driven strategy and impact-focused leadership.
   </p>
 </section>
+<section class="section" style="background:#f5f5f5;">
+  <h2>Education</h2>
 
+  <div class="cards">
+
+    <div class="card">
+      <h3>IIM Amritsar</h3>
+      <p>MBA (2024–2026)</p>
+      <p><strong>CGPA: 92.3%</strong></p>
+    </div>
+
+    <div class="card">
+      <h3>SRCC, Delhi University</h3>
+      <p>B.Com (Hons.)</p>
+      <p><strong>89.19%</strong></p>
+    </div>
+
+  </div>
+</section>
+<section class="section">
+  <h2>Skills</h2>
+
+  <div style="display:flex; flex-wrap:wrap; gap:15px;">
+
+    <span style="background:#111; color:white; padding:10px 20px; border-radius:25px;">Advanced Excel</span>
+    <span style="background:#111; color:white; padding:10px 20px; border-radius:25px;">Financial Modeling</span>
+    <span style="background:#111; color:white; padding:10px 20px; border-radius:25px;">SPSS</span>
+    <span style="background:#111; color:white; padding:10px 20px; border-radius:25px;">Python</span>
+    <span style="background:#111; color:white; padding:10px 20px; border-radius:25px;">KNIME</span>
+    <span style="background:#111; color:white; padding:10px 20px; border-radius:25px;">Google Analytics</span>
+
+  </div>
+</section>
+
+<section class="section" style="background:#f5f5f5;">
+  <h2>Case Competition Wins</h2>
+
+  <div class="cards">
+
+    <div class="card">
+      <h3>National Winner</h3>
+      <p>Parikshit’25 – TAPMI</p>
+      <p>590+ Registrations</p>
+    </div>
+
+    <div class="card">
+      <h3>National Winner</h3>
+      <p>Finlatics Rebranding Case</p>
+      <p>IIM Amritsar</p>
+    </div>
+
+    <div class="card">
+      <h3>National Runners-Up</h3>
+      <p>Circus Maximus – XLRI</p>
+      <p>616+ Registrations</p>
+    </div>
+
+  </div>
+</section>  
+  
 <section class="section" style="background:#f5f5f5;">
   <h2>Experience</h2>
 
