--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ footer {
 }
 
 @keyframes slideShow {
-  0%   { background-image: url("images/hero1.jpg"); }
-  20%  { background-image: url("images/hero2.jpg"); }
-  40%  { background-image: url("images/hero3.jpg"); }
-  60%  { background-image: url("images/hero4.jpg"); }
-  80%  { background-image: url("images/hero5.jpg"); }
-  100% { background-image: url("images/hero1.jpg"); }
+  0%   { background-image: url("images/photo1.jpeg"); }
+  20%  { background-image: url("images/photo2.jpeg"); }
+  40%  { background-image: url("images/photo3.jpeg"); }
+  60%  { background-image: url("images/photo4.jpeg"); }
+  80%  { background-image: url("images/photo5.jpeg"); }
+  100% { background-image: url("images/photo1.jpeg"); }
 }
 </style>
 </head>
