--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@ h2 {
 }
 
 /* CARDS */
+.cards {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
 
 .card {
   background: #1f1f1f;   /* lighter than background */
