--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
   --bg-main: #0b001a;
   --bg-section: #120026;
   --card-bg: #1a0033;
-  --accent: #a855f7;
-  --glow: rgba(168,85,247,0.6);
+  --accent: #b388ff;
+  --soft-glow: rgba(179,136,255,0.25);
 }
 
-html {
-  scroll-behavior: smooth;
-}
+html { scroll-behavior: smooth; }
 
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: radial-gradient(circle at 50% 20%, #1f003d, #0b001a 60%);
+  background: radial-gradient(circle at 50% 20%, #1b0036, #0b001a 65%);
   color: white;
 }
 
-/* HERO SECTION */
+/* HERO */
 
 #hero {
   height: 100vh;
@@ -39,7 +37,7 @@ body {
 .overlay {
   height: 100%;
   width: 100%;
-  background: rgba(10,0,20,0.75);
+  background: rgba(8,0,18,0.75);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,42 +46,42 @@ body {
 }
 
 #hero h1 {
-  font-size: 60px;
+  font-size: 58px;
   margin: 0;
-  text-shadow: 0 0 30px var(--accent);
-}
-
-#dynamic-text {
-  font-size: 22px;
-  margin-top: 15px;
-  color: var(--accent);
+  letter-spacing: 1px;
   text-shadow: 0 0 15px var(--accent);
 }
 
+#dynamic-text {
+  font-size: 20px;
+  margin-top: 15px;
+  color: var(--accent);
+}
+
 button {
-  margin-top: 25px;
-  padding: 12px 30px;
+  margin-top: 30px;
+  padding: 12px 28px;
+  border-radius: 30px;
   border: 1px solid var(--accent);
   background: transparent;
   color: var(--accent);
-  border-radius: 30px;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.3s ease;
 }
 
 button:hover {
   background: var(--accent);
-  color: black;
-  box-shadow: 0 0 25px var(--glow);
+  color: #000;
 }
 
 /* SECTIONS */
 
 .section {
-  padding: 80px 10%;
+  padding: 90px 10%;
   opacity: 0;
   transform: translateY(40px);
   transition: all 0.8s ease;
+  position: relative;
 }
 
 .section.show {
@@ -95,103 +93,95 @@ button:hover {
   background: var(--bg-section);
 }
 
+.section::before {
+  content: "";
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 450px;
+  height: 450px;
+  background: radial-gradient(circle, var(--soft-glow), transparent 70%);
+  filter: blur(80px);
+  z-index: -1;
+}
+
 h2 {
   color: var(--accent);
   margin-bottom: 40px;
-  text-shadow: 0 0 12px var(--accent);
+  font-weight: 600;
 }
 
-/* CARDS */
+/* CARDS – SUBTLE PREMIUM STYLE */
 
 .cards {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  gap: 30px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 40px;
 }
 
 .card {
-  background: var(--card-bg);
-  padding: 25px;
-  flex: 1 1 300px;
-  max-width: 350px;
+  padding: 30px;
   border-radius: 20px;
-  border: 1px solid rgba(168,85,247,0.2);
-  box-shadow: 0 0 30px rgba(168,85,247,0.15);
-  transition: 0.4s ease;
+  background: linear-gradient(145deg, #1a0033, #210040);
+  border: 1px solid rgba(255,255,255,0.05);
+  backdrop-filter: blur(6px);
+  transition: 0.35s ease;
 }
 
 .card:hover {
-  transform: translateY(-10px);
-  border: 1px solid var(--accent);
-  box-shadow: 0 0 35px var(--glow);
+  transform: translateY(-6px);
+  border: 1px solid rgba(179,136,255,0.5);
+  box-shadow: 0 10px 30px rgba(179,136,255,0.15);
 }
 
 .card h3 {
   color: var(--accent);
+  margin-bottom: 12px;
 }
 
 .card p {
   color: #ddd;
+  line-height: 1.6;
 }
 
-/* SKILLS */
+/* SECRET SECTION */
 
-.skill-badge {
-  border: 1px solid var(--accent);
-  padding: 10px 20px;
-  border-radius: 25px;
-  margin: 5px;
-  display: inline-block;
-  color: var(--accent);
-  transition: 0.3s;
-}
-
-.skill-badge:hover {
-  background: var(--accent);
-  color: black;
-  box-shadow: 0 0 15px var(--glow);
-}
-
-/* GALLERY */
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.gallery img {
-  width: 100%;
-  border-radius: 20px;
-  filter: brightness(85%);
-  transition: 0.4s;
-}
-
-.gallery img:hover {
-  filter: brightness(100%);
-  box-shadow: 0 0 30px var(--glow);
-}
-
-/* FOOTER */
-
-footer {
-  background: #080015;
-  color: #aaa;
+.secret-container {
   text-align: center;
-  padding: 40px;
+  margin-top: 30px;
 }
 
-/* HERO SLIDESHOW */
+.secret-container input {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  margin-right: 10px;
+}
+
+#secretImage {
+  display: none;
+  margin-top: 30px;
+  max-width: 400px;
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(179,136,255,0.3);
+}
+
+/* SLIDESHOW */
 
 @keyframes slideShow {
   0%   { background-image: url("images/photo1.jpeg"); }
   20%  { background-image: url("images/photo2.jpeg"); }
   40%  { background-image: url("images/photo3.jpeg"); }
   60%  { background-image: url("images/photo4.jpeg"); }
-  80%  { background-image: url("images/photo3.jpeg"); }
+  80%  { background-image: url("images/photo5.jpeg"); }
   100% { background-image: url("images/photo1.jpeg"); }
+}
+
+footer {
+  text-align: center;
+  padding: 50px;
+  color: #aaa;
 }
 
 </style>
@@ -203,114 +193,70 @@ footer {
   <div class="overlay">
     <h1>Kavinkumar S</h1>
     <p id="dynamic-text"></p>
-
     <button onclick="document.getElementById('about').scrollIntoView();">
       Explore ↓
     </button>
-
-    <a href="resume.pdf" target="_blank"
-       style="margin-top:15px; padding:10px 25px;
-       border:1px solid var(--accent);
-       color:var(--accent);
-       text-decoration:none;
-       border-radius:25px;">
-       Download Resume
-    </a>
   </div>
 </header>
 
 <section id="about" class="section">
   <h2>About</h2>
   <p>
-    Creative strategic thinker with experience in Private Banking,
-    Key Account Management, and Financial Markets.
-    I combine structured analysis with narrative framing to create measurable impact.
+    Creative strategic thinker blending structured finance,
+    leadership execution and narrative-driven impact.
   </p>
 </section>
 
 <section class="section">
-  <h2>Strategic Lens</h2>
-  <p>
-    Strategy is storytelling backed by numbers.
-    I approach challenges with structured thinking, creative framing,
-    and disciplined execution.
-  </p>
-</section>
-
-<section class="section">
-  <h2>Impact Snapshot</h2>
+  <h2>Education</h2>
   <div class="cards">
     <div class="card">
-      <h3>₹40L+</h3>
-      <p>Business Portfolio Managed</p>
+      <h3>IIM Amritsar</h3>
+      <p>MBA (2024–2026)</p>
     </div>
     <div class="card">
-      <h3>250+</h3>
-      <p>UHNW Businesses Analyzed</p>
-    </div>
-    <div class="card">
-      <h3>10+</h3>
-      <p>National Case Wins</p>
+      <h3>SRCC, Delhi University</h3>
+      <p>B.Com (Hons.)</p>
     </div>
   </div>
 </section>
 
 <section class="section">
-  <h2>Skills</h2>
-  <div>
-    <span class="skill-badge">Advanced Excel</span>
-    <span class="skill-badge">Financial Modeling</span>
-    <span class="skill-badge">SPSS</span>
-    <span class="skill-badge">Python</span>
-    <span class="skill-badge">KNIME</span>
-  </div>
-</section>
-
-<section class="section">
-  <h2>Creative & Personal</h2>
+  <h2>Experience</h2>
   <div class="cards">
     <div class="card">
-      <h3>Adventure & Travel</h3>
-      <p>Drawn to exploration and new perspectives through travel and adventure sports.</p>
+      <h3>Zomato – Key Accounts Manager</h3>
+      <p>Managed ₹40L portfolio across 120+ restaurants. Led growth and retention initiatives.</p>
     </div>
     <div class="card">
-      <h3>Storytelling</h3>
-      <p>A natural storyteller who believes clarity shapes influence.</p>
-    </div>
-    <div class="card">
-      <h3>Cultural Depth</h3>
-      <p>Passionate about authentic South Indian cuisine and meaningful friendships.</p>
+      <h3>ICICI Bank – Private Banking Intern</h3>
+      <p>Mapped 250+ UHNW businesses and supported IPO & stake-sale discussions.</p>
     </div>
   </div>
 </section>
 
 <section class="section">
-  <h2>Gallery</h2>
-  <div class="gallery">
-    <img src="images/photo1.jpeg">
-    <img src="images/photo2.jpeg">
-    <img src="images/photo3.jpeg">
+  <h2>🔐 Private Access</h2>
+  <div class="secret-container">
+    <input type="password" id="passwordInput" placeholder="Enter Access Code">
+    <button onclick="checkPassword()">Unlock</button>
+    <img id="secretImage" src="images/secret.jpeg">
   </div>
 </section>
 
 <footer>
-  <p>Contact: kavin1507kumar@gmail.com</p>
+  Contact: kavin1507kumar@gmail.com
 </footer>
 
 <script>
 
 /* TYPEWRITER EFFECT */
-
 const words = ["Strategist.", "Storyteller.", "Explorer.", "Builder."];
-let i = 0;
-let j = 0;
-let currentWord = "";
-let isDeleting = false;
+let i = 0, j = 0, currentWord = "", isDeleting = false;
 const element = document.getElementById("dynamic-text");
 
 function typeEffect() {
   currentWord = words[i];
-
   if (!isDeleting) {
     element.textContent = currentWord.substring(0, j++);
     if (j > currentWord.length) {
@@ -327,13 +273,10 @@ function typeEffect() {
   }
   setTimeout(typeEffect, isDeleting ? 50 : 100);
 }
-
 typeEffect();
 
 /* SCROLL REVEAL */
-
 const sections = document.querySelectorAll('.section');
-
 window.addEventListener('scroll', () => {
   sections.forEach(section => {
     const top = section.getBoundingClientRect().top;
@@ -342,6 +285,16 @@ window.addEventListener('scroll', () => {
     }
   });
 });
+
+/* PASSWORD */
+function checkPassword() {
+  const input = document.getElementById("passwordInput").value;
+  if (input === "Dhatri") {
+    document.getElementById("secretImage").style.display = "block";
+  } else {
+    alert("Incorrect Access Code");
+  }
+}
 
 </script>
 
