--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ h2 {
   font-weight: 600;
 }
 
-/* CARDS – SUBTLE PREMIUM STYLE */
+/* CARDS */
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 40px;
 }
 
@@ -125,7 +125,6 @@ h2 {
   border-radius: 20px;
   background: linear-gradient(145deg, #1a0033, #210040);
   border: 1px solid rgba(255,255,255,0.05);
-  backdrop-filter: blur(6px);
   transition: 0.35s ease;
 }
 
@@ -145,7 +144,7 @@ h2 {
   line-height: 1.6;
 }
 
-/* SECRET SECTION */
+/* SECRET */
 
 .secret-container {
   text-align: center;
@@ -165,6 +164,24 @@ h2 {
   max-width: 400px;
   border-radius: 20px;
   box-shadow: 0 15px 40px rgba(179,136,255,0.3);
+}
+
+/* GALLERY */
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+}
+
+.gallery img {
+  width: 100%;
+  border-radius: 20px;
+  transition: 0.4s;
+}
+
+.gallery img:hover {
+  transform: scale(1.03);
 }
 
 /* SLIDESHOW */
@@ -202,8 +219,7 @@ footer {
 <section id="about" class="section">
   <h2>About</h2>
   <p>
-    Creative strategic thinker blending structured finance,
-    leadership execution and narrative-driven impact.
+    Creative strategic thinker blending structured finance, leadership execution and narrative-driven impact.
   </p>
 </section>
 
@@ -226,12 +242,48 @@ footer {
   <div class="cards">
     <div class="card">
       <h3>Zomato – Key Accounts Manager</h3>
-      <p>Managed ₹40L portfolio across 120+ restaurants. Led growth and retention initiatives.</p>
+      <p>Managed ₹40L portfolio across 120+ restaurants. Led growth initiatives.</p>
     </div>
     <div class="card">
       <h3>ICICI Bank – Private Banking Intern</h3>
-      <p>Mapped 250+ UHNW businesses and supported IPO & stake-sale discussions.</p>
+      <p>Mapped 250+ UHNW businesses and supported IPO discussions.</p>
     </div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Impact Snapshot</h2>
+  <div class="cards">
+    <div class="card"><h3>₹40L+</h3><p>Portfolio Managed</p></div>
+    <div class="card"><h3>250+</h3><p>Businesses Analyzed</p></div>
+    <div class="card"><h3>10+</h3><p>National Case Wins</p></div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Skills</h2>
+  <div class="cards">
+    <div class="card"><h3>Finance</h3><p>Financial Modeling, Valuation, DCF</p></div>
+    <div class="card"><h3>Analytics</h3><p>Excel, SPSS, Python, KNIME</p></div>
+    <div class="card"><h3>Strategy</h3><p>Market Mapping, Growth Strategy</p></div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Beyond the Resume</h2>
+  <div class="cards">
+    <div class="card"><h3>Adventure & Travel</h3><p>Explorer mindset shaped by travel and adventure sports.</p></div>
+    <div class="card"><h3>Storytelling</h3><p>Believes strategy is storytelling backed by clarity.</p></div>
+    <div class="card"><h3>Cultural Depth</h3><p>Loves authentic South Indian cuisine & meaningful friendships.</p></div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Gallery</h2>
+  <div class="gallery">
+    <img src="images/photo1.jpeg">
+    <img src="images/photo2.jpeg">
+    <img src="images/photo3.jpeg">
   </div>
 </section>
 
@@ -250,7 +302,6 @@ footer {
 
 <script>
 
-/* TYPEWRITER EFFECT */
 const words = ["Strategist.", "Storyteller.", "Explorer.", "Builder."];
 let i = 0, j = 0, currentWord = "", isDeleting = false;
 const element = document.getElementById("dynamic-text");
@@ -275,7 +326,6 @@ function typeEffect() {
 }
 typeEffect();
 
-/* SCROLL REVEAL */
 const sections = document.querySelectorAll('.section');
 window.addEventListener('scroll', () => {
   sections.forEach(section => {
@@ -286,10 +336,8 @@ window.addEventListener('scroll', () => {
   });
 });
 
-/* PASSWORD */
 function checkPassword() {
-  const input = document.getElementById("passwordInput").value;
-  if (input === "Dhatri") {
+  if (document.getElementById("passwordInput").value === "Dhatri") {
     document.getElementById("secretImage").style.display = "block";
   } else {
     alert("Incorrect Access Code");
